--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,11 @@ html,body{
   height: 100%;
 }
 
-p{
+.no-scroll{
+  overflow: hidden;
+}
+
+p,span{
   color:white;
   font-size: 1.2rem;
   font-family: 'Gamja Flower', cursive;
@@ -47,27 +51,18 @@ align-items: center;
 
 .button-start-server-container{
   opacity: 0;
-  transition: all 1s ease;
   display: flex;
-  border:1px solid white;
-  height: 7rem;
-  width: 7rem;
   justify-content: center;
   align-items: center;
   text-align: center;
-  border-radius: 100%;
   margin-top: 2rem;
-  box-shadow: 0px 0px rgb(255, 255, 255);
-
 }
 
 .button-start-server-container-show{
+  transition: all 1s ease;
   opacity: 1;
 }
 
-:hover.button-start-server-circle{
-  box-shadow: 0px 0px rgb(255, 255, 255);
-}
 
 .button-start-server{
   background:white;
@@ -79,7 +74,7 @@ align-items: center;
   justify-content: center;
   align-items: center;
   text-align: center;
-	transition: all .25s ease-in-out;
+	transition: all 1s ease-in-out;
   position: relative;
 }
 
@@ -111,20 +106,69 @@ align-items: center;
     50%{background-position:100% 19%;}
     100%{background-position:0% 82%;}
 }
-:hover.button-start-server{
-  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
-  background-size: 1800% 1800%;
-  animation:rainbow 1s ease infinite;
+
+.button-start-server-circle{
+
+  position: relative;
+  border-radius: 100%;
+  display: flex;
+align-items: center;
+position: relative;
+padding: 15%;
+box-sizing: border-box;
+border: solid 5px transparent;
+background: white;
+ background-clip: padding-box;
+ //filter: grayscale(100%) contrast(0.5);
+
 }
-:hover.button-start-server:before{
-  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
-  background-size: 1800% 1800%;
-	animation:rainbow 1s ease infinite,button-beat 1.5s ease-out infinite;
+.button-start-server-circle.button-start-server-color{
+
+background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+background-size: 400% 400%;
+ background-clip: padding-box;
+animation: Gradient 5s ease infinite;
+transition:3s all linear;
+//filter: grayscale(0%) contrast(1);
+
 }
-:hover.button-start-server:after{
-  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
-  background-size: 1800% 1800%;
-  animation:rainbow 1s ease infinite, button-beat 1.5s ease-out .4s infinite;
+
+.button-start-server-circle:before{
+
+  content: '';
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  margin: 1.5px;/* !importanté */
+  border-radius: inherit; /* !importanté */
+  background: black;
+}
+.button-start-server-color>.button-start-server{
+  background: inherit;
+  background-size: 400% 400%;
+  animation: Gradient 5s ease infinite;
+
+}
+.button-start-server-color>.button-start-server:before{
+  background: inherit;
+	background-size: 400% 400%;
+	animation: Gradient 5s ease infinite, button-beat 1.5s ease-out .4s infinite;
+}
+.button-start-server-color>.button-start-server:after{
+  background: inherit;
+	background-size: 400% 400%;
+	animation: Gradient 5s ease infinite, button-beat 1.5s ease-in .4s infinite;
+}
+
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
 }
 
 .button-start-server:before{
@@ -133,13 +177,12 @@ align-items: center;
   position: absolute;
   top: 0;
   left: 0;
-  background-color: white;
+  background-color: inherit;
   width: 100%;
   height: 100%;
   border-radius: 100%;
   opacity: 0;
-  transition: all .25s ease-in-out;
-  background-color:white;
+  transition: all 1s ease-in-out;
 }
 .button-start-server:after{
 content: "";
@@ -147,12 +190,12 @@ display: block;
 position: absolute;
 top: 0;
 left: 0;
-background-color:white;
+background-color:inherit;
 width: 100%;
 height: 100%;
 border-radius: 100%;
 opacity: 0;
-transition: all .25s ease-in-out;
+transition: all 1s ease-in-out;
 }
 
 .button-start-server-text{
